<Added JS logic for saving events to localstorage with confirmation.  Adjusted bootstrap stylings and css stylings to match mockup>

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,6 +3,10 @@ body {
   font-size: 16px;
 }
 
+header {
+  border-bottom: 10px solid black;
+}
+
 textarea {
   background: transparent;
   border: none;
