<Added function to run at the beginning to load saved events>

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,6 +7,10 @@ header {
   border-bottom: 10px solid black;
 }
 
+#confirmation {
+  display: none;
+}
+
 textarea {
   background: transparent;
   border: none;
